jwt returns with headers in create request, test extracting claims
