# user-service/src/main/resources/openapi.yaml
@@ -23,6 +23,11 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
+          headers:
+            Authorization:
+              description: Bearer token
+              schema:
+                type: string
         '400':
           $ref: '#/components/responses/BadRequest'
         '401':
@@ -96,6 +101,11 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
+          headers:
+            Authorization:
+              description: Bearer token
+              schema:
+                type: string
         '400':
           $ref: '#/components/responses/BadRequest'
         '401':
